# Guide_Wire_Hackathon_Build_Break_Fix

./: .gitignore  README.md  SUBMISSION.md  gigshield.db  main.py  pyproject.toml  settings.gradle.kts
GigShield/: settings.gradle.kts
GigShield/app/: build.gradle.kts  proguard-rules.pro
GigShield/app/src/main/: AndroidManifest.xml
GigShield/app/src/main/java/com/bbf/gigshield/: MainActivity.kt
app/: build.gradle.kts
app/src/androidTest/java/com/example/guide_wire_hackathon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bbf/gigshield/: MainActivity.kt
app/src/main/java/com/bbf/gigshield/data/: TokenStore.kt
app/src/main/java/com/example/guide_wire_hackathon/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/guide_wire_hackathon/: ExampleUnitTest.kt
gigshield-backend/: .env.example  database.py  gigshield.db  main.py  requirements.txt
gigshield-backend/jobs/: __init__.py  trigger_monitor.py
gigshield-backend/models/: __init__.py  claim.py  disruption.py  payout.py  policy.py  worker.py
gigshield-backend/routers/: __init__.py  analytics.py  auth.py  claims.py  payouts.py  policies.py  workers.py
gigshield-backend/schemas/: __init__.py  claim.py  disruption.py  payout.py  policy.py  worker.py
gigshield-backend/services/: __init__.py  auth_service.py  fraud_service.py  llm_service.py  payout_service.py  premium_service.py  sms_service.py  trigger_service.py
gigshield-backend/utils/: __init__.py  helpers.py
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
