[project]
name = "guide-wire-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.10.4",
    "bcrypt==4.0.1",
    "fastapi==0.115.0",
    "groq==0.13.1",
    "httpx==0.27.2",
    "passlib==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.12",
    "requests==2.32.3",
    "sqlalchemy==2.0.35",
    "uvicorn==0.30.6",
]
